--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5433;Database=cvs-reader;Username=postgres;Password=1111"
-  }
+  },
+  "PathToStore" : "C:/Users/Artem/Desktop/Programs/Web/Angular/CSV-Reader-server/Csv-Reader.Services/Store/"
 }
